fix: caption spacing

--- a/filing/css/styles.css
+++ b/filing/css/styles.css
@@ -622,9 +622,6 @@ p.caption {
 .team .column-100 p.caption {
 	padding-bottom: 0px;
 }
-.home p.caption {
-	padding-top: 10px;
-}
 
 p.intro {
 	font-size: 28px;
